# Alliancev

./: .gitignore  README.md
scripts/: install-pdm.py
src/plugins/server_api/: pyproject.toml
src/plugins/server_api/src/: main.py
src/plugins/server_api/src/database/: mongo.py
src/plugins/server_api/src/models/: token.py
src/plugins/server_api/src/routers/: task_board.py
