[project]
name = "server_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniil Ermolaev", email = "blcklptn@icloud.com"},
]
dependencies = [
    "uvicorn>=0.29.0",
    "fastapi>=0.110.0",
    "pydantic>=2.6.4",
    "motor>=3.4.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
